...
        return cardLabel
    }()
    
    lazy var buttonFavorite: UIButton = {
        let buttonFavorite = UIButton()
        
        buttonFavorite.setImage(UIImage(named: "heartEmpty")?.withTintColor(.redAction, renderingMode: .alwaysOriginal), for: .normal)
        buttonFavorite .addTarget(self, action: #selector(buttonFavTouchUpInside), for: .touchUpInside)
        buttonFavorite.contentMode = .scaleAspectFit
        buttonFavorite.translatesAutoresizingMaskIntoConstraints = false
        
        return buttonFavorite
    }()
...
