...
    }()
    
    
    lazy var buttonNewFact: UIButton = {
        let button = UIButton()
        button.backgroundColor = .purpleAction
        button.setTitle("New fact", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.layer.cornerRadius = 42/2
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
...
